--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
   <head>
     <title>Open House 2021 - Dyson DesEng</title>
     <meta charset="utf-8" />
