--- a/client/index.html
+++ b/client/index.html
@@ -39,57 +39,71 @@
     <meta name="msapplication-config" content="/favicons/browserconfig.xml" />
     <link type="text/css" rel="stylesheet" href="main.css" />
     <script src="socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="tween.umd.js"></script>
   </head>
-
   <body>
     <div id="info">
       <span class="debug">Velocity: <span id="velocity">0</span></span>
+      <span class="debug"
+        >Position: <span id="pos-x">0</span><span>, </span><span id="pos-y">0</span></span
+      >
     </div>
-
-    <div id="modal-container">
+    <div id="modal-screen">
       <div id="modal">
-        <div id="modal-header">
-          <div id="modal-image"></div>
-        </div>
-        <div id="modal-body">
-          <h1 id="modal-title">Content baby!</h1>
-          <h2 id="modal-author">Oliver Veal</h2>
-
-          <p id="modal-desc">
-            This is a project I completed alonside the Holy McRollington Associatio(TM) when...
-          </p>
-
-          <a href="" id="modal-link" target="blank">
-            <button id="modal-button"><span id="modal-button-text">View Project</span></button>
-          </a>
+        <button id="modal-close">
+          <span>&#x2715;</span>
+        </button>
+        <div id="modal-contents">
+          <div id="modal-loading">
+            <div id="modal-loading-medium"></div>
+            <div id="modal-loading-short"></div>
+            <div id="modal-loading-long"></div>
+          </div>
+          <div id="modal-error">An error occurred while loading this project.</div>
+          <div id="modal-header"><div id="modal-image"></div></div>
+          <div id="modal-body">
+            <h1 id="modal-title">Example Content!</h1>
+            <h2 id="modal-author">Oliver Veal</h2>
+            <p id="modal-desc">
+              The Example Content devide is a radically new approach to reinventing the innovate...
+            </p>
+            <div id="modal-footer">
+              <a href="" id="modal-link" target="blank"
+                ><button id="modal-button">View Project</button></a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
     <div id="blocker">
       <div id="loading-screen">
         <img src="assets/loader.gif" id="loading-bulb" />
-        <div class="loading-bar">
-          <div id="progress-bar"></div>
-        </div>
+        <div class="loading-bar"><div id="progress-bar"></div></div>
       </div>
-
-      <div id="instructions">
-        <span style="font-size: 36px">Click to Look Around</span>
-        <br /><br />
-        Move: WASD or Arrow Keys<br />
-        Look: MOUSE
+      <div id="crosshair">&bull;</div>
+      <div id="instructions-screen">
+        <span style="font-size: 36px">Click to Look Around</span><br /><br />Move: WASD or Arrow
+        Keys<br />Look: MOUSE
       </div>
-
+      <div id="info-screen">
+        <span style="font-size: 36px" id="info-name"></span><br /><span id="info-author"></span>
+      </div>
+      <div id="escape-screen">
+        <span>Press</span> <span class="escape">Esc</span> <span>to show your cursor</span>
+      </div>
       <div id="name-screen">
-        <span style="font-size: 36px">Enter a Name:</span>
-        <span style="font-size: 18px">(leave blank to be anonymous)</span>
-        <form action="#" id="name-form">
-          <input type="text" id="name-input" />
+        <span style="font-size: 32px">Enter Your Name</span>
+        <span style="font-size: 16px">or leave blank to be anonymous</span>
+        <form action="#" autocomplete="off" id="name-form">
+          <input type="text" id="name-input" tabindex="0" /><button id="form-submit">
+            &#x21B3;
+          </button>
+          <div class="break"></div>
+          <span id="name-hint">20/20 remaining</span>
         </form>
       </div>
     </div>
-
     <script type="module" src="main.js"></script>
   </body>
 </html>
