--- a/client/index.html
+++ b/client/index.html
@@ -62,15 +62,15 @@
           <div id="modal-error">An error occurred while loading this project.</div>
           <div id="modal-header"><div id="modal-image"></div></div>
           <div id="modal-body">
-            <h1 id="modal-title">Example Content!</h1>
-            <h2 id="modal-author">Oliver Veal</h2>
+            <h1 id="modal-title">Title</h1>
+            <h2 id="modal-author">Author</h2>
             <p id="modal-desc">
-              The Example Content devide is a radically new approach to reinventing the innovate...
+              Description
             </p>
             <div id="modal-footer">
-              <a href="" id="modal-link" target="blank"
-                ><button id="modal-button">View Project</button></a
-              >
+              <a href="" id="modal-link" target="blank">
+                <button id="modal-button">View Project</button>
+              </a>
             </div>
           </div>
         </div>
@@ -78,6 +78,11 @@
     </div>
     <div id="blocker">
       <div id="loading-screen">
+        <div id="logos">
+          <img src="assets/logos/DysonBlack.png" alt="Dyson School of Design Engineering" id="logo"/>
+          <img src="assets/logos/ImperialBlack.png" alt="Imperial College London" id="logo"/>
+          <img src="assets/logos/RCA.png" alt="Royal College of Art" id="logo"/>
+        </div>
         <img src="assets/loader.gif" id="loading-bulb" />
         <div class="loading-bar"><div id="progress-bar"></div></div>
       </div>
