--- a/client/index.html
+++ b/client/index.html
@@ -64,9 +64,7 @@
           <div id="modal-body">
             <h1 id="modal-title">Title</h1>
             <h2 id="modal-author">Author</h2>
-            <p id="modal-desc">
-              Description
-            </p>
+            <p id="modal-desc">Description</p>
             <div id="modal-footer">
               <a href="" id="modal-link" target="blank">
                 <button id="modal-button">View Project</button>
@@ -79,9 +77,13 @@
     <div id="blocker">
       <div id="loading-screen">
         <div id="logos">
-          <img src="assets/logos/DysonBlack.png" alt="Dyson School of Design Engineering" id="logo"/>
-          <img src="assets/logos/ImperialBlack.png" alt="Imperial College London" id="logo"/>
-          <img src="assets/logos/RCA.png" alt="Royal College of Art" id="logo"/>
+          <img
+            src="assets/logos/DysonBlack.png"
+            alt="Dyson School of Design Engineering"
+            id="logo"
+          />
+          <img src="assets/logos/ImperialBlack.png" alt="Imperial College London" id="logo" />
+          <img src="assets/logos/RCA.png" alt="Royal College of Art" id="logo" />
         </div>
         <img src="assets/loader.gif" id="loading-bulb" />
         <div class="loading-bar"><div id="progress-bar"></div></div>
