Modified logos and tried to cache glb

--- a/client/index.html
+++ b/client/index.html
@@ -78,12 +78,11 @@
       <div id="loading-screen">
         <div id="logos">
           <img
-            src="assets/logos/DysonBlack.png"
+            src="assets/logos/logoleft.png"
             alt="Dyson School of Design Engineering"
             id="logo"
           />
-          <img src="assets/logos/ImperialBlack.png" alt="Imperial College London" id="logo" />
-          <img src="assets/logos/RCA.png" alt="Royal College of Art" id="logo" />
+          <img src="assets/logos/logoright.png" alt="Imperial College London | Royal College of Art" id="logo" />
         </div>
         <img src="assets/loader.gif" id="loading-bulb" />
         <div class="loading-bar"><div id="progress-bar"></div></div>
