--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
     <link type="text/css" rel="stylesheet" href="main.css" />
     <script src="socket.io/socket.io.js"></script>
     <script type="text/javascript" src="tween.umd.js"></script>
+    <script src="localforage/localforage.js"></script>
   </head>
   <body>
     <div id="info">
